# dose-and-activity

./: CMakeLists.txt  Co60.mac  doseAndActivity.cc  neutron.mac  photogun.mac  run.sh  vis.mac
include/: EffectiveDose.hh  Hit.hh  InducedActivity.hh  action.hh  generator.hh  parallelWorld.hh  parallelWorldMany.hh  physicalConstruction.hh  run.hh  runAction.hh
processing/: activity.py  activityPlot.py  activityTable.py  doseRatePlot.py  doseRateTable.py  photogun.py  photogunTable.py
src/: EffectiveDose.cc  Hit.cc  InducedActivity.cc  action.cc  generator.cc  parallelWorld.cc  parallelWorldMany.cc  physicalConstruction.cc  run.cc  runAction.cc
verification/: doseRate.py  energyActivity.py
